--- a/Experiments/Ruby/rails-projects/feature-dash/app/views/features/edit.html.erb
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/views/features/edit.html.erb
@@ -39,8 +39,8 @@
     <% end %>
 
     <div class="button_row">
-      <%= link_to("Cancel", "/features", class: "button button_secondary") %>
-      <%= feature_field.submit("Save", class: "button button_primary") %>
+      <%= link_to("Cancel", "/features", class: "button secondary") %>
+      <%= feature_field.submit("Save", class: "button primary") %>
     </div>
   <% end %>
 </div>
