buckets is coming in all as one object rather than individual objects

--- a/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/feature-tile.css
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/feature-tile.css
@@ -18,9 +18,9 @@
   transform: scale(1.01);
 }
 
-.feature_tile:active {
+/* .feature_tile:active {
   transform: scale(1);
-}
+} */
 
 .feature_tile:focus-visible {
   outline: none;
