Buckets can now be modified

--- a/Experiments/Ruby/rails-projects/feature-dash/app/views/features/index.html.erb
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/views/features/index.html.erb
@@ -39,7 +39,7 @@
           <% end %>
           <% if feature.bucket %>
             <div class="detail">
-              <p class="feature_key"><%= "#{feature.bucket.name}" %></p>
+              <p class="feature_key">Buckets</p>
               <% feature.bucket.buckets.each do |bucket| %>
                 <p>
                   <% bucket.each do |key, value| %>
