--- a/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/global.css
+++ b/Experiments/Ruby/rails-projects/feature-dash/app/assets/stylesheets/global.css
@@ -25,6 +25,8 @@
   --text-100: hsla(0, 0%, 100%, 1);               /* active input text */
   --text-75: hsla(var(--primary-hue), 22%, 75%, 1); /* text on light */
   --text-55: hsla(var(--primary-hue), 13%, 55%, 1); /* text on dark */
+  --led-hue: 214; /* 214 */
+  --led-glow: hsla(var(--led-hue), 100%, 56%, 1);
   /* Misc */
   --ease-out-quart: cubic-bezier(0.165, 0.85, 0.45, 1);
   --radius-elements: 8px;
