--- a/Experiments/Remix/onboarding-blues-stack/app/theme-config.css
+++ b/Experiments/Remix/onboarding-blues-stack/app/theme-config.css
@@ -1,3 +1,18 @@
 .radix-themes {
   /* --default-font-size: 18px; */
 }
+
+.rt-Heading {
+  text-wrap: balance;
+}
+.rt-Text {
+  text-wrap: pretty;
+}
+
+/* Overrides for size-3 token */
+.rt-TextFieldInput:where(.rt-r-size-3) {
+  height: var(--space-8);
+}
+.rt-BaseButton:where(.rt-r-size-3) {
+  --base-button-height: var(--space-8);
+}
