--- a/Courses/Emil Kowalski - Animations on the Web/Layout animations/root-vehicle-selection/src/app.css
+++ b/Courses/Emil Kowalski - Animations on the Web/Layout animations/root-vehicle-selection/src/app.css
@@ -44,14 +44,33 @@ main {
   .content {
     width: 100%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    padding: 8px 0;
+    padding: 8px 16px 8px 0;
+  }
+  .text-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
   h2 {
     font-size: 1.25rem;
   }
   p {
     color: hsl(var(--muted-foreground));
+  }
+}
+
+.indicator {
+  flex-shrink: 0;
+  width: 10px;
+  height: 10px;
+  border-radius: 99px;
+  background-color: hsl(var(--foreground) / 0.25);
+
+  &.active {
+    background-color: hsl(var(--success));
+    box-shadow: 0 0 0 5px hsl(var(--success) / 0.2);
   }
 }
 
@@ -71,20 +90,20 @@ main {
 }
 
 .modal {
-  --spacing: 20px;
   display: flex;
   flex-direction: row;
-  gap: var(--spacing);
+  align-items: center;
+  gap: 34px;
   width: min(500px, 100%);
   background-color: hsl(var(--card));
   border-radius: 12px;
   border: 1px solid hsl(var(--border));
-  padding: var(--spacing);
+  padding: 20px 20px 20px 30px;
   box-shadow: 0 6px 20px -2px hsl(0 0% 0% / 0.15);
 
   img {
     width: 210px;
-    height: 193px;
+    height: 190px;
     border-radius: var(--radius);
     object-fit: contain;
     background-color: white;
@@ -93,16 +112,25 @@ main {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 12px;
+  }
+  .header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .text-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
   .sub-content {
+    margin-top: 18px;
     display: flex;
     flex-direction: column;
     gap: 8px;
   }
   h2 {
     font-size: 1.25rem;
-    align-self: flex-start; /* Solves issue where transition blurs text across full width of container before settling */
   }
   p {
     color: hsl(var(--muted-foreground));
