--- a/Experiments/UI/range-sliders/src/app.css
+++ b/Experiments/UI/range-sliders/src/app.css
@@ -76,17 +76,14 @@
   &.indicator-light-green {
     --light-color: 162 26% 50%;
     --light-bright: 162 100% 90%;
-    --height: 78%;
   }
   &.indicator-light-orange {
     --light-color: 12 26% 50%;
     --light-bright: 30 100% 90%;
-    --height: 46%;
   }
 
   position: relative;
   width: 100%;
-  height: var(--height);
   background-image: linear-gradient(
     to bottom,
     hsl(var(--light-color) / 0) 0%,
@@ -117,7 +114,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 40px;
+  margin-top: 40px;
   width: 45px;
 }
 
@@ -131,12 +128,6 @@
 }
 
 .slider-thumb-container {
-  &.left-slider {
-    transform: translateY(220px);
-  }
-  &.right-slider {
-    transform: translateY(40px);
-  }
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -153,11 +144,11 @@
   }
 }
 
-.slider-thumb-top-container {
+.slider-thumb-half {
+  flex: 1;
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 36px;
   border-radius: 6px;
   padding: 1px;
 }
@@ -206,15 +197,6 @@
   );
 }
 
-.slider-thumb-bottom-container {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 36px;
-  border-radius: 6px;
-  padding: 1px;
-}
-
 .slider-thumb-bottom {
   position: relative;
   z-index: 2;
@@ -231,45 +213,3 @@
     hsl(var(--border) / 0.2) 100%
   );
 }
-
-/* 
-.slider-container {
-  display: flex;
-  flex-direction: column;
-  padding-top: 40px;
-}
-
-.slider {
-  flex: 1;
-  writing-mode: vertical-lr;
-  direction: rtl;
-  vertical-align: middle;
-
-  -webkit-appearance: none;
-  appearance: none;
-  cursor: pointer;
-
-  background-color: hsl(var(--background));
-  box-shadow: inset 0 -2.5px 0 0 hsl(var(--border)),
-    inset 0 0 0 2px hsl(var(--background));
-  border-radius: 999px;
-  width: 12px;
-  position: relative;
-
-  &::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 45px;
-    height: 45px;
-    background-color: hsl(var(--background));
-    background-image: linear-gradient(
-      to bottom,
-      hsl(var(--border) / 0.4) 0%,
-      hsl(var(--border)) 66%,
-      hsl(var(--border) / 0.5) 70%,
-      hsl(var(--border) / 0) 100%
-    );
-    border-radius: 4px;
-    border-top: 2px solid hsl(var(--border));
-  }
-} */
