--- a/Experiments/UI/range-sliders/src/app.css
+++ b/Experiments/UI/range-sliders/src/app.css
@@ -74,28 +74,40 @@
 
 .indicator-light {
   &.indicator-light-green {
-    --light-color: 162 26% 50%;
+    --light-color-dull: 162 30% 50%;
+    --light-color: 162 56% 70%;
     --light-bright: 162 100% 90%;
-  }
-  &.indicator-light-orange {
-    --light-color: 12 26% 50%;
-    --light-bright: 30 100% 90%;
   }
 
   position: relative;
+  z-index: 2;
   width: 100%;
-  background-image: linear-gradient(
-    to bottom,
-    hsl(var(--light-color) / 0) 0%,
-    hsl(var(--light-color)) 60%,
-    hsl(var(--light-bright)) 100%
-  );
   border-radius: 999px;
+  padding: 2px;
   box-shadow: 0 10px 20px -3px hsl(var(--light-color) / 0.3),
     0 15px 40px 2px hsl(var(--light-color) / 0.4),
     0 20px 40px 0px hsl(var(--light-bright) / 0.1);
 
-  &::before {
+  background-image: linear-gradient(
+    to bottom,
+    hsl(var(--light-color-dull) / 0) 0%,
+    hsl(var(--light-color-dull)) 90%
+  );
+
+  & .indicator-light-inner {
+    width: 100%;
+    height: 100%;
+    border-radius: 999px;
+    /* background-color: hsl(var(--background)); */
+    background-image: linear-gradient(
+      to bottom,
+      hsl(var(--light-color) / 0.05) 0%,
+      hsl(var(--light-color) / 0.9) 30%,
+      hsl(var(--light-bright)) 100%
+    );
+  }
+
+  /* &::before {
     content: "";
     position: absolute;
     inset: 0;
@@ -103,7 +115,7 @@
     box-shadow: inset 0 0 0 2px hsl(var(--background) / 0.5);
     border-radius: 999px;
     mix-blend-mode: overlay;
-  }
+  } */
 }
 
 /* +++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
