--- a/Experiments/UI/range-sliders/src/app.css
+++ b/Experiments/UI/range-sliders/src/app.css
@@ -64,6 +64,8 @@
 
 .indicator-track {
   flex: 1;
+  display: flex;
+  align-items: flex-end;
   background-color: hsl(var(--background) / 0.8);
   box-shadow: inset 0 -2.5px 0 0 hsl(var(--border)),
     inset 0 0 0 2px hsl(var(--background));
@@ -84,12 +86,12 @@
   width: 100%;
   border-radius: 999px;
   padding: 2px;
-  box-shadow: 0 10px 20px -3px hsl(var(--light-color) / 0.3),
-    0 15px 40px 2px hsl(var(--light-color) / 0.4),
-    0 20px 40px 0px hsl(var(--light-bright) / 0.1);
+  box-shadow: 0 -10px 20px -3px hsl(var(--light-color) / 0.3),
+    0 -15px 40px 2px hsl(var(--light-color) / 0.4),
+    0 -20px 40px 0px hsl(var(--light-bright) / 0.1);
 
   background-image: linear-gradient(
-    to bottom,
+    to top,
     hsl(var(--light-color-dull) / 0) 0%,
     hsl(var(--light-color-dull)) 90%
   );
@@ -98,24 +100,13 @@
     width: 100%;
     height: 100%;
     border-radius: 999px;
-    /* background-color: hsl(var(--background)); */
     background-image: linear-gradient(
-      to bottom,
+      to top,
       hsl(var(--light-color) / 0.05) 0%,
       hsl(var(--light-color) / 0.9) 30%,
       hsl(var(--light-bright)) 100%
     );
   }
-
-  /* &::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background-color: hsl(var(--light-bright));
-    box-shadow: inset 0 0 0 2px hsl(var(--background) / 0.5);
-    border-radius: 999px;
-    mix-blend-mode: overlay;
-  } */
 }
 
 /* +++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
