--- a/Experiments/UI/range-sliders/src/app.css
+++ b/Experiments/UI/range-sliders/src/app.css
@@ -4,7 +4,7 @@
   gap: 100px;
   padding: 60px 110px 60px 60px;
   border-radius: 20px;
-  border-top: 2px solid hsl(var(--border));
+  border-top: 1.5px solid hsl(var(--border));
   background-image: linear-gradient(
     200deg,
     hsl(var(--card)),
@@ -67,7 +67,7 @@
   display: flex;
   align-items: flex-end;
   background-color: hsl(var(--background) / 0.8);
-  box-shadow: inset 0 -2.5px 0 0 hsl(var(--border)),
+  box-shadow: inset 0 -2px 0 0 hsl(var(--border)),
     inset 0 0 0 2px hsl(var(--background));
   border-radius: 999px;
   padding: 2.5px;
@@ -75,10 +75,15 @@
 }
 
 .indicator-light {
-  &.indicator-light-green {
+  &.green-light {
     --light-color-dull: 162 30% 50%;
     --light-color: 162 56% 70%;
     --light-bright: 162 100% 90%;
+  }
+  &.orange-light {
+    --light-color-dull: 22 30% 50%;
+    --light-color: 22 56% 70%;
+    --light-bright: 22 100% 90%;
   }
 
   position: relative;
@@ -124,7 +129,7 @@
 .slider-track {
   flex: 1;
   background-color: hsl(var(--background) / 0.8);
-  box-shadow: inset 0 -2.5px 0 0 hsl(var(--border)),
+  box-shadow: inset 0 -2px 0 0 hsl(var(--border)),
     inset 0 0 0 2px hsl(var(--background));
   border-radius: 999px;
   width: 12px;
@@ -157,15 +162,13 @@
 }
 
 .glow {
-  &.reflect-green {
+  &.green-light {
     --light-color: 162 26% 40%;
     --light-bright: 162 60% 90%;
-    /* --offset-distance: -8%; */
   }
-  &.reflect-orange {
-    --light-color: 10 26% 40%;
-    --light-bright: 10 100% 80%;
-    /* --offset-distance: 86%; */
+  &.orange-light {
+    --light-color: 22 26% 40%;
+    --light-bright: 22 100% 80%;
   }
 
   position: absolute;
@@ -173,13 +176,11 @@
   width: 60px;
   width: 60px;
   offset-path: rect(0% auto 100% auto);
-  /* offset-distance: var(--offset-distance); */
   background: radial-gradient(
     hsl(var(--light-bright)) 0%,
     hsl(var(--light-color)) 30%,
     transparent 60%
   );
-  opacity: var(--opacity);
 }
 
 .slider-thumb-top {
@@ -204,7 +205,6 @@
   width: 100%;
   height: 100%;
   border-radius: 5px;
-  /* border-top: 1px solid hsl(var(--border)); */
   background-color: hsl(var(--background));
   background-image: linear-gradient(
     to bottom,
