--- a/Experiments/CodeSchool_CSS-Layout_9-2024/ramping-up-with-css-layout/setup.css
+++ b/Experiments/CodeSchool_CSS-Layout_9-2024/ramping-up-with-css-layout/setup.css
@@ -1,5 +1,10 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css";
 
+/* TLDR: This file just makes things pretty */
+
+/* Feel free to ignore this file */
+/* These are mostly just visual changes that we won't be covering for the layout workshop */
+
 *,
 *:after,
 *:before {
